--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -33,24 +33,20 @@ jobs:
             bodolsog/py3-kivy-buildozer:latest \
             /bin/bash -c " \
               cd /app && \
+              # ensure buildozer.spec points at src/ and has copy_source enabled
               sed -i 's|^source.dir.*|source.dir = src|' buildozer.spec && \
-              sed -i 's|^requirements.*|requirements = kivy,plyer,requests|' buildozer.spec && \
-              sed -i 's|^android.permissions.*|android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,VIBRATE|' buildozer.spec && \
-              sed -i '/^p4a.skip_recipes/q; \$ a p4a.skip_recipes = libffi\np4a.recipes_to_skip = libffi' buildozer.spec && \
+              # (manually add android.copy_source if not already present)
+              grep -q '^android.copy_source' buildozer.spec \
+                || echo 'android.copy_source = True' >> buildozer.spec && \
               yes | buildozer --verbose android debug \
             "
 
-      - name: 📂 Verify entrypoint in the APK
+      - name: 📂 Verify main.py made it into the APK
         run: |
-          echo "🔓 Scanning APK for main.py or main.pyo…"
-          if unzip -l bin/*.apk \
-               | awk '{print $4}' \
-               | grep -E -q '(^|/)main\.(py|pyo)$' ; then
-            echo "✅ Found main.py/main.pyo in the APK!"
-          else
-            echo "❌ Could not find main.py or main.pyo in the APK!"
-            exit 1
-          fi
+          echo "🔓 Inspecting APK for your raw sources…"
+          unzip -l bin/*.apk | grep -q 'assets/src/main.py' \
+            && echo "✅ assets/src/main.py is packaged!" \
+            || { echo "❌ assets/src/main.py NOT found in APK – buildozer.spec might still be excluding it."; exit 1; }
 
       - name: 📦 Upload APK
         uses: actions/upload-artifact@v4
